# instrument-example

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp
cli/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  widget.cpp  widget.h
sdk/: libinstruments.so.0.0.1
sdk/include/instruments/: forceps.h  scissors.h
